--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,26 @@
 
     <groupId>nl.korthout</groupId>
     <artifactId>cantis</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <properties>
+        <maven.compiler.source>10</maven.compiler.source>
+        <maven.compiler.target>10</maven.compiler.target>
+        <maven.compiler.release>10</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jdk.version>1.9</jdk.version>
         <commons-io.version>2.6</commons-io.version>
         <hamcrest-core.version>1.3</hamcrest-core.version>
         <javaparser-core.version>3.4.3</javaparser-core.version>
         <jcommander.version>1.72</jcommander.version>
         <junit.version>4.12</junit.version>
-        <lombok.version>1.16.20</lombok.version>
+        <lombok.version>1.18.0</lombok.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
         <maven-plugin-api.version>3.1.1</maven-plugin-api.version>
-        <maven-plugin-plugin.version>3.5.1</maven-plugin-plugin.version>
-        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <maven-plugin-plugin.version>3.5.2</maven-plugin-plugin.version>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
         <rxjava.version>2.1.9</rxjava.version>
     </properties>
 
@@ -85,15 +87,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
