--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,16 @@
         <maven.compiler.release>10</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <commons-io.version>2.6</commons-io.version>
+        <guava.version>26.0-jre</guava.version>
         <hamcrest-core.version>1.3</hamcrest-core.version>
-        <javaparser-core.version>3.4.3</javaparser-core.version>
+        <javaparser-core.version>3.6.15</javaparser-core.version>
         <jcommander.version>1.72</jcommander.version>
         <junit.version>4.12</junit.version>
-        <lombok.version>1.18.0</lombok.version>
+        <lombok.version>1.18.2</lombok.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
-        <maven-plugin-api.version>3.1.1</maven-plugin-api.version>
+        <maven-plugin-annotations.version>3.5.2</maven-plugin-annotations.version>
+        <maven-plugin-api.version>3.5.4</maven-plugin-api.version>
         <maven-plugin-plugin.version>3.5.2</maven-plugin-plugin.version>
         <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
     </properties>
@@ -58,6 +59,11 @@
         </dependency>
 
         <!--Dev-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
