--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
         <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler.release>10</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <assertj.version>3.10.0</assertj.version>
         <commons-io.version>2.6</commons-io.version>
         <guava.version>26.0-jre</guava.version>
-        <hamcrest-core.version>1.3</hamcrest-core.version>
         <javaparser-core.version>3.6.15</javaparser-core.version>
         <jcommander.version>1.72</jcommander.version>
         <junit.version>4.12</junit.version>
@@ -78,9 +78,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest-core.version}</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
