--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
         <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler.release>10</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <airline.version>0.8</airline.version>
         <assertj.version>3.10.0</assertj.version>
         <commons-io.version>2.6</commons-io.version>
         <guava.version>26.0-jre</guava.version>
         <javaparser-core.version>3.6.15</javaparser-core.version>
-        <jcommander.version>1.72</jcommander.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.18.2</lombok.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
@@ -48,9 +48,10 @@
             <version>${javaparser-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.beust</groupId>
-            <artifactId>jcommander</artifactId>
-            <version>${jcommander.version}</version>
+            <!--cli-parser-->
+            <groupId>io.airlift</groupId>
+            <artifactId>airline</artifactId>
+            <version>${airline.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
