--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <airline.version>0.8</airline.version>
         <assertj.version>3.10.0</assertj.version>
+        <cactoos.version>0.36</cactoos.version>
         <commons-io.version>2.6</commons-io.version>
         <guava.version>26.0-jre</guava.version>
         <javaparser-core.version>3.6.15</javaparser-core.version>
@@ -27,6 +28,7 @@
         <maven-plugin-api.version>3.5.4</maven-plugin-api.version>
         <maven-plugin-plugin.version>3.5.2</maven-plugin-plugin.version>
         <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+        <mockito-core.version>2.21.0</mockito-core.version>
     </properties>
 
     <dependencies>
@@ -48,7 +50,7 @@
             <version>${javaparser-core.version}</version>
         </dependency>
         <dependency>
-            <!--cli-parser-->
+            <!--command-parser-->
             <groupId>io.airlift</groupId>
             <artifactId>airline</artifactId>
             <version>${airline.version}</version>
@@ -60,6 +62,12 @@
         </dependency>
 
         <!--Dev-->
+        <dependency>
+            <!--eo-alternative-to-guava-->
+            <groupId>org.cactoos</groupId>
+            <artifactId>cactoos</artifactId>
+            <version>${cactoos.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -82,6 +90,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
