--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,21 @@
     <version>0.0.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
+    <prerequisites>
+        <maven>3.0.5</maven>
+    </prerequisites>
+
     <properties>
         <maven.compiler.source>10</maven.compiler.source>
         <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler.release>10</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <airline.version>0.8</airline.version>
-        <assertj.version>3.10.0</assertj.version>
+        <assertj.version>3.11.1</assertj.version>
         <cactoos.version>0.36</cactoos.version>
         <commons-io.version>2.6</commons-io.version>
         <guava.version>26.0-jre</guava.version>
-        <javaparser-core.version>3.6.15</javaparser-core.version>
+        <javaparser-core.version>3.6.19</javaparser-core.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.18.2</lombok.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
