--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>nl.korthout</groupId>
+    <groupId>com.github.korthout</groupId>
     <artifactId>cantis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
@@ -193,7 +193,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>nl.korthout.cantis.Cantis</mainClass>
+                            <mainClass>com.github.korthout.cantis.Cantis</mainClass>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
