--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.korthout</groupId>
     <artifactId>cantis</artifactId>
-    <version>0.1</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <prerequisites>
@@ -41,7 +41,7 @@
         <connection>scm:git:https://github.com/korthout/Cantis.git</connection>
         <developerConnection>scm:git:https://github.com/korthout/Cantis.git</developerConnection>
         <url>https://github.com/korthout/cantis</url>
-      <tag>v0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
