--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.korthout</groupId>
     <artifactId>cantis</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>maven-plugin</packaging>
 
     <prerequisites>
@@ -43,7 +41,8 @@
         <connection>scm:git:https://github.com/korthout/Cantis.git</connection>
         <developerConnection>scm:git:https://github.com/korthout/Cantis.git</developerConnection>
         <url>https://github.com/korthout/cantis</url>
-    </scm>
+      <tag>v0.1</tag>
+  </scm>
 
     <distributionManagement>
         <snapshotRepository>
