feat(errors): Fail compilation on warnings

--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,9 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <release>${jdk.version}</release>
+                    <compilerArgs>
+                        <arg>-Werror</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
