--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,13 @@
                 </executions>
             </plugin>
 
+            <!-- Scan codebase with sonar -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar-maven-plugin.version}</version>
+            </plugin>
+
             <!-- Perform code coverage analysis -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -299,24 +306,6 @@
                                 <goals>
                                     <goal>check</goal>
                                 </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>sonar</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.sonarsource.scanner.maven</groupId>
-                        <artifactId>sonar-maven-plugin</artifactId>
-                        <version>${sonar-maven-plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <phase>verify</phase>
                             </execution>
                         </executions>
                     </plugin>
