chore(release): Prepare release v0.2 (#32)
- Update new javadoc @since tags to 0.2
- Update README references to latest version
- Fix javadoc complaining about unknown @checkstyle tags

--- a/pom.xml
+++ b/pom.xml
@@ -346,6 +346,15 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
+                                <configuration>
+                                    <tags>
+                                        <tag>
+                                            <name>checkstyle</name>
+                                            <placement>a</placement>
+                                            <head>checkstyle:</head>
+                                        </tag>
+                                    </tags>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
