test(travis): Test polyglot builds
So far all travis had to do was build a java project using maven. Now we
need to support multiple parallel jobs to build each subproject,
starting with from-java.

This commit tests whether travis can once again build the java project
and concurrently run a job for a completely different language and project.

After this test, the test job can be removed again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
-language: java
+dist: xenial
 
-jdk:
-  - openjdk11
+jobs:
+  include:
+    - name: 'Cantis from-java'
+      language: java
+      jdk: openjdk11
+      before_script: cd from-java
+      script: mvn clean package sonar:sonar
 
-script:
-  - mvn clean package sonar:sonar
+    - name: 'Test job'
+      language: generic
+      script: echo 'hello world'
 
 cache:
   directories:
