--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,17 @@ dist: xenial
 
 jobs:
   include:
-    - name: 'Cantis from-java'
+    - stage: 'Build packages'
+    - name: 'from-java'
       language: java
       jdk: openjdk11
       before_script: cd from-java
-      script: mvn clean package sonar:sonar
+      script: mvn clean package
 
-    - name: 'Test job'
-      language: generic
-      script: echo 'hello world'
+    - stage: 'Quality checks'
+    - name: 'Sonarcloud'
+      language: java
+      script: sonar-scanner
 
 cache:
   directories:
