--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.sonar/cache'
+    - 'from-java/target'
 
 addons:
   sonarcloud:
