fix(sonar): Add jacoco report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=com.github.korthout:cantis
 sonar.java.binaries=from-java/target
 sonar.java.libraries=from-java/target/*.jar
+sonar.coverage.jacoco.xmlReportPaths=from-java/target/jacoco-ut/jacoco.xml
