--- a/from-java/pom.xml
+++ b/from-java/pom.xml
@@ -253,7 +253,7 @@
                 </executions>
             </plugin>
 
-            <!-- Perform code coverage analysis -->
+            <!-- Scan codebase with sonar -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -279,6 +279,13 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Perform code coverage analysis -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
